<resources>
    <string name="app_name">Cars List</string>
    <string name="textview_brand">Марка:</string>
    <string name="textView_model">Модель:</string>
    <string name="textView_price">Цена, ₽</string>
    <string name="textView_change_car">Изменить данные:</string>
    <string name="textView_color">Цвет:</string>
    <string name="button_modified">Сохранить изменения</string>
    <string name="button_search">Искать з/ч в каталоге</string>
    <string name="button_sort_price">Сорт по цене ⇑</string>
    <string name="button_add_car">Добавить Авто</string>
    <string name="textView_delete">Удалить автомобиль?</string>
    <string name="button_deleted">Удалить</string>
    <string name="textView_add">Добавить в базу:</string>
    <string name="editText_brand">Марка</string>
    <string name="editText_model">Модель</string>
    <string name="editText_color">Цвет</string>
    <string name="editText_price">Цена</string>
    <string name="button_added">Добавить</string>
    <string name="error_scanner_cancelled" translatable="false">Code scanner is cancelled.</string>
    <string name="error_camera_permission_not_granted" translatable="false">Camera permission is not granted.</string>
    <string name="error_app_name_unavailable" translatable="false">App name is not set.</string>
    <string name="error_default_message" translatable="false">Failed to scan code: %1$s</string>
    <string name="button_qrcode">Сканировать qr код</string>
    <string name="default_text_qrcode">Текст Qr код будет тут</string>
</resources>